--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -476,7 +476,7 @@ ul.actions.fit.stacked {
 
 #bg:before {
   transition: background-color 2.5s ease-in-out 0.75s;
-  background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
+  background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5));
   background-size: auto, 256px 256px;
   background-position: center, center;
   background-repeat: no-repeat, repeat;
