--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,12 @@
-/* BG */
-
 body.is-preload #bg:before { background-color: transparent; }
-
-/* Header */
-
-body.is-preload #header,
-body.is-preload #header > *, 
-body.is-preload #header .content .inner {
-    -moz-filter: none;
-    -webkit-filter: none;
-    -ms-filter: none;
+body.is-preload #header, body.is-preload #header > *, body.is-preload #header .content .inner {
     filter: none;
     opacity: 1;
 }
-
 body.is-preload #header .content .inner {
     max-height: none;
     padding: 3rem 2rem;
 }
-
-/* Main */
-
 #main article {
     opacity: 1;
     margin-top: 4rem;
