--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -1,5 +1,3 @@
-/* Font Awesome Base Styles */
-
 .fa, .fab, .fad, .fal, .far, .fas {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
@@ -10,56 +8,25 @@
     line-height: 1;
 }
 
-/* Font Sizes */
-
 .fa-lg { font-size: 1.33333em; line-height: .75em; vertical-align: -.0667em; }
 .fa-xs { font-size: .75em; }
 .fa-sm { font-size: .875em; }
 .fa-1x { font-size: 1em; }
-.fa-2x { font-size: 2em; }
-.fa-3x { font-size: 3em; }
-.fa-4x { font-size: 4em; }
-.fa-5x { font-size: 5em; }
-.fa-6x { font-size: 6em; }
-.fa-7x { font-size: 7em; }
-.fa-8x { font-size: 8em; }
-.fa-9x { font-size: 9em; }
-.fa-10x { font-size: 10em; }
-
-/* Alignments & Spacing */
+.fa-2x, .fa-3x, .fa-4x, .fa-5x, .fa-6x, .fa-7x, .fa-8x, .fa-9x, .fa-10x { font-size: var(--i)em; }
+.fa-2x { --i: 2; } .fa-3x { --i: 3; } .fa-4x { --i: 4; } .fa-5x { --i: 5; } .fa-6x { --i: 6; } 
+.fa-7x { --i: 7; } .fa-8x { --i: 8; } .fa-9x { --i: 9; } .fa-10x { --i: 10; }
 
 .fa-fw { text-align: center; width: 1.25em; }
-.fa-ul { list-style-type: none; margin-left: 2.5em; padding-left: 0; }
+.fa-ul { list-style: none; margin-left: 2.5em; padding-left: 0; }
 .fa-ul > li { position: relative; }
-.fa-li {
-    left: -2em;
-    position: absolute;
-    text-align: center;
-    width: 2em;
-    line-height: inherit;
-}
-
-.fa-border {
-    border: .08em solid #eee;
-    border-radius: .1em;
-    padding: .2em .25em .15em;
-}
-.fa-pull-left, .fa-pull-right { 
-    float: left; 
-    margin-right: .3em; 
-}
-.fa-pull-right { 
-    float: right; 
-    margin-left: .3em; 
-}
+.fa-li { left: -2em; position: absolute; text-align: center; width: 2em; line-height: inherit; }
+.fa-border { border: .08em solid #eee; border-radius: .1em; padding: .2em .25em .15em; }
+.fa-pull-left, .fa-pull-right { float: left; margin-right: .3em; }
+.fa-pull-right { float: right; margin-left: .3em; }
 
 .fa-spin { animation: fa-spin 2s linear infinite; }
 .fa-pulse { animation: fa-spin 1s steps(8) infinite; }
-
-@keyframes fa-spin {
-    0% { transform: rotate(0deg); }
-    to { transform: rotate(1turn); }
-}
+@keyframes fa-spin { 0% { transform: rotate(0deg); } to { transform: rotate(1turn); } }
 
 .fa-rotate-90 { transform: rotate(90deg); }
 .fa-rotate-180 { transform: rotate(180deg); }
@@ -68,47 +35,16 @@
 .fa-flip-vertical { transform: scaleY(-1); }
 .fa-flip-both { transform: scale(-1); }
 
-.fa-stack {
-    display: inline-block;
-    height: 2em;
-    line-height: 2em;
-    position: relative;
-    vertical-align: middle;
-    width: 2.5em;
-}
+.fa-stack { display: inline-block; height: 2em; line-height: 2em; position: relative; vertical-align: middle; width: 2.5em; }
 .fa-stack-1x { line-height: inherit; }
-.fa-stack-2x {
-    font-size: 2em;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-}
+.fa-stack-2x { font-size: 2em; position: absolute; text-align: center; width: 100%; }
 .fa-inverse { color: #fff; }
-.sr-only {
-    border: 0;
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-.sr-only-focusable:active, .sr-only-focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
 
-/* Font Faces */
+.sr-only { border: 0; clip: rect(0,0,0,0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+.sr-only-focusable:active, .sr-only-focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
 
 @font-face {
-    font-family: "Font Awesome 5 Brands";
-    font-weight: 400;
-    font-display: block;
+    font-family: "Font Awesome 5 Brands"; font-weight: 400; font-display: block;
     src: url(../webfonts/fa-brands-400.eot);
     src: url(../webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),
          url(../webfonts/fa-brands-400.woff2) format("woff2"),
@@ -116,12 +52,10 @@
          url(../webfonts/fa-brands-400.ttf) format("truetype"),
          url(../webfonts/fa-brands-400.svg#fontawesome) format("svg");
 }
-.fab { font-family: "Font Awesome 5 Brands"; }
+.fab { font-family: "Font Awesome 5 Brands"; font-weight: 400; }
 
 @font-face {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 400;
-    font-display: block;
+    font-family: "Font Awesome 5 Free"; font-weight: 400; font-display: block;
     src: url(../webfonts/fa-regular-400.eot);
     src: url(../webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),
          url(../webfonts/fa-regular-400.woff2) format("woff2"),
@@ -129,12 +63,10 @@
          url(../webfonts/fa-regular-400.ttf) format("truetype"),
          url(../webfonts/fa-regular-400.svg#fontawesome) format("svg");
 }
-.fab, .far { font-weight: 400; }
+.far { font-family: "Font Awesome 5 Free"; font-weight: 400; }
 
 @font-face {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-display: block;
+    font-family: "Font Awesome 5 Free"; font-weight: 900; font-display: block;
     src: url(../webfonts/fa-solid-900.eot);
     src: url(../webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),
          url(../webfonts/fa-solid-900.woff2) format("woff2"),
@@ -142,5 +74,4 @@
          url(../webfonts/fa-solid-900.ttf) format("truetype"),
          url(../webfonts/fa-solid-900.svg#fontawesome) format("svg");
 }
-.fa, .far, .fas { font-family: "Font Awesome 5 Free"; }
-.fa, .fas { font-weight: 900; }
+.fa, .fas { font-family: "Font Awesome 5 Free"; font-weight: 900; }
